--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Password Maker</title>
 </head>
 <body>
-    <div>
+    <div class="container">
         <h2>Generate Your Password</h2>
 
         <button>
